--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         <footer>
             <p>مشغل القرآن الكريم &copy; <span id="current-year">2024</span> - صمم بحب لنشر القرآن الكريم</p>
             <p style="margin-top: 10px; font-size: 0.9rem;">جميع الحقوق محفوظة للمواقع المزودة للتسجيلات القرآنية</p>
-            <!-- p style="margin-top: 5px; font-size: 0.8rem; color: #888;">التاريخ الهجري يعمل باستخدام API من موقع hijri-date</p>
+            <!-- p style="margin-top: 5px; font-size: 0.8rem; color: #888;">التاريخ الهجري يعمل باستخدام API من موقع hijri-date</p> -->
         </footer>
     </div>
 
